syntax = "proto3";

message TransactionsHistoryResponse {
  repeated TransactionPB transactions = 1; //Array transactions
}

message TransactionPB {
  string hash = 1;
  string address = 2;
  string contract_address = 3;
  string type = 4;
  string balance = 5;
  string delta = 6;
  string from = 7;
  string to = 8;
  string block_hash = 9;
  int32 block_number = 10;
  string status = 11;
  string timestamp = 12;
  int32 nonce = 13;
}


message HashResponsePB {
  string hash = 1;
  string block_hash = 2;
  int32 block_number = 3;
  string from = 4;
  string to = 5;
  string timestamp = 6;
  string value = 7;
  string gas = 8;
  string gas_price = 9;
  string gas_used = 10;
  int32 nonce = 11;
  repeated DeltaPB deltas = 12;
}

message DeltaPB {
  string contract_address = 1;
  string type = 2;
  string delta = 3;
  string from = 4;
  string to = 5;
  string status = 6;
}
